# football

./: .gitignore  Makefile  Readme.md  challenge.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
api/management/commands/: load_league_data.py
api/migrations/: 0001_initial.py  0002_player_alter_competition_area_team_competition_teams.py  0003_coach.py  0004_alter_area_options_alter_competition_options_and_more.py  0005_alter_coach_date_of_birth_alter_coach_nationality_and_more.py  0006_alter_team_squad.py  0007_alter_player_position.py  0008_alter_competition_area.py  0009_alter_competition_teams_alter_team_squad.py  0010_alter_coach_date_of_birth_alter_coach_name_and_more.py  0011_alter_coach_options.py  0012_alter_team_tla.py  0013_alter_area_code_alter_coach_name_alter_player_name.py
api/tests/: test_competitions.py  test_import_league.py  test_models.py  test_players.py  test_teams.py
main/: settings.py  urls.py
reqs/: api.rest  competitions.rest  import_league.rest
